crates/config-derive/tests/ui/enum.stderr
error: enums are not supported with #[derive(Merge)]
  --> ./tests/ui/enum.rs:22:10
   |
22 | #[derive(noelware_config_derive::Merge)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `noelware_config_derive::Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
